Fix spacing of quote under profile image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,8 +123,12 @@ h3{
     font-weight: 400;
     font-size: 20px;
     color: #341C09;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 20px;
+}
+
+#under-image {
+    margin-top: 110px;
 }
 
 .profile-pic {
